<resources>
    <string name="app_name">Hotelzo</string>
    <string name="login_text">PRIJAVA</string>
    <string name="email">E-mail</string>
    <string name="password">Lozinka</string>
    <string name="login">Prijavi se</string>
    <string name="registracija">Registrirajte se!</string>
    <string name="prijavi_u_racun">Prijavite se u račun</string>
    <string name="zaboravljena_lozinka">Zaboravili ste lozinku?</string>

    <string name="greska">Greška</string>

    <string name="test">TEST</string>
    <string name="confirm_password">Potvrdite lozinku</string>
    <string name="name">Ime i prezime</string>
    <string name="phone_number">Broj telefona</string>
    <string name="button_register">Registriraj</string>
    <string name="register_empty_field">Ispunite sva polja!</string>
    <string name="register_passwords_mismatch">Lozinke moraju biti iste!</string>
    <string name="register_invalid_email">Neispravan email!</string>
    <string name="register_invalid_phone_number">Neispravan broj telefona!</string>
    <string name="register_short_password">Lozinka mora imati barem 8 znakova!</string>
    <string name="username">Korisničko ime</string>
    <string name="username_taken">Korisničko ime je zauzeto!</string>
    <string name="label_forgottenPassword">Zaboravili ste lozinku?</string>
    <string name="label_placeholder_mail">Email</string>
    <string name="toast_empty_mail">Molimo Vas unesite vašu email adresu. </string>
    <string name="toast_existing_mail_forgotten_password"> Uspješno poslan email za promjenu lozinke! </string>
    <string name="toast_non_existing_mail_forgotten_password"> Ne postoji račun sa navedenom email adresom.</string>
    <string name="send_text">Pošalji</string>
    <string name="name_of_app">Hotelzo</string>
    <string name="instructions_input_email">Unesite vašu email adresu</string>
    <string name="register_error">Neuspješna registracija</string>
    <string name="guest_role">gost</string>
    <string name="rezerviraj">Rezerviraj</string>

    <string name="pricekajte">Pričekajte</string>
    <string name="prijava_u_tijeku">Prijava u tijeku</string>
    <string name="hotelzo">Hotelzo</string>

    <string name="filter_kapacitet">Kapacitet:</string>
    <string name="filter_price">Cijena:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="room">Soba:</string>
    <string name="start_date">Datum početka:</string>
    <string name="end_date">Datum kraja:</string>
    <string name="sample_text">Sample text</string>
    <string name="loading_error">Greška pri dohvatu.</string>
    <string name="past_reservations">Prijašnje</string>
    <string name="reservations">Rezervacije</string>
    <string name="content_description_gumb_za_brisanje">Gumb za brisanje</string>
    <string name="oznaka">oznaka</string>
    <string name="odabir_datuma">Molim vas izaberite datum dolaska i odlaska.</string>
    <string name="odabir_dolaska">Molim vas izaberite datum dolaska.</string>
    <string name="odabir_odlaska">Molim vas izaberite datum odlaska.</string>
    <string name="uspjesna_rez">Rezervacija uspješno kreirana</string>
    <string name="greska_dolazak_trenutni_datum">Datum dolaska ne može biti prije trenutnog datuma.</string>
    <string name="greska_odlazak_dolazak">Datum odlaska ne može biti prije datuma dolaska.</string>
    <string name="posotji_rezervacija_datum">Već postoji rezervacija za odabrani datum. Molimo odaberite drugi datum.</string>
    <string name="greska_postojecih_rezervacija">Pogreška pri dohvaćanju postojećih rezervacija. Molimo pokušajte ponovno.</string>
    <string name="datum_dolaska">Datum dolaska:</string>
    <string name="obrisi">Obriši</string>
    <string name="datum_odlaska">Datum odlaska:</string>
    <string name="ime_prezime">Ime i prezime:</string>
    <string name="oznaka_sobe">Oznaka sobe:</string>
    <string name="toast_postojeca_oznaka">Unesite sobu s postojećom oznakom</string>

    <string name="email_subject_reservation">Rezervacija sobe</string>
    <string name="email_greeting">Poštovani</string>
    <string name="email_room_reserved">Uspješno ste rezervirali sobu</string>
    <string name="email_reservation_start">Početak rezervacije: </string>
    <string name="email_reservation_end">Kraj rezervacije: </string>
    <string name="email_farewell">Lijep pozdrav,</string>
    <string name="your_reservation">Vaša rezervacija sobe</string>
    <string name="from">od</string>
    <string name="to">do</string>
    <string name="cancelled">Vaša rezervacija je uspješno otkazana.</string>
    <string name="email_subject_cancelled">Otkazana rezervacija</string>
    <string name="prijava_admin">Prijavljeni ste kao admin</string>
    <string name="prijava_greska">Neuspješna prijava</string>
    <string name="oznaka_sobe_pregled">Oznaka sobe: </string>
    <string name="opis_sobe_pregled">Opis sobe: </string>
    <string name="hello_world">Hello World!</string>
    <string name="kapacitet">Kapacitet:</string>
    <string name="slika_desc">Slika</string>
    <string name="room_description">Room Description</string>
    <string name="prijedlog_cijene">$100</string>
</resources>