<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">
    <TextView
        android:id="@+id/lblPrijava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_text"
        style="@style/TextAppearance.MaterialComponents.Headline4"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_above="@id/tilLozinka"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLozinka"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/etLozinka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnPrijava"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/tilLozinka"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/lblZaboravljenaLozinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="161dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/zaboravljena_lozinka" />

    <TextView
        android:id="@+id/lblRegistracija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registracija"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>