<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sample_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_room_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/room"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/date_start_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/date_end_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sample_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/date_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sample_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/date_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:hint="@string/sample_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <ImageView
                android:visibility="gone"
                android:contentDescription="@string/content_description_gumb_za_brisanje"
                android:id="@+id/btn_delete_reservation"
                android:layout_marginStart="130dp"

                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_reset_filter" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>