<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/background_color"
    android:layout_marginBottom="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_room_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_start_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/date_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_end_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/date_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>