<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:fitsSystemWindows="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgottenPassword"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include
        android:id="@+id/top_bar_back"
        layout="@layout/top_bar_back">
    </include>

    <ImageView

        android:layout_width="117dp"
        android:layout_height="106dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_forgotten_password"
        app:layout_constraintBottom_toTopOf="@+id/tvForgottenPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_back" />

    <Button
        android:id="@+id/btn_submit_forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_text"
        android:backgroundTint="@color/top_bar"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.227" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="301dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/label_placeholder_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/tvForgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_forgottenPassword"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <TextView
        android:id="@+id/tv_reset_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:textSize="18sp"
        android:layout_marginBottom="43dp"
        android:text="@string/instructions_input_email"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgottenPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>




